# coffee_point

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  run.py  run_without_db.py  setup.cfg
.github/workflows/: deploy-to-cloudrun.yml  deploy_to_cloudrun.yml  docker_build_push.yml  docker_build_push_google.yml  run_tests.yml  sql_db_control.yml
alembic/: env.py
alembic/versions/: 054eeac207e6_add_active_flag_to_user.py  0959939afcb3_add_checklists.py  097fee9c2c84_report.py  0c992f6d16a7_changed_column_to_user.py  10a1783e1ab6_debit.py  18ecca93afdd_initial_2.py  1c32a73a81d8_shifts.py  2999eb04b247_initial.py  304e0aebb3b8_added_image_url.py  49e4e7fbb8fe_initial.py  4b9b9204c3ba_added_online_marker.py  50a9f3051780_init.py  5858612eb415_initial.py  65a1f51180c7_order_number.py  65d3749c29e9_initial.py  8459e6782d36_initial.py  855841e3b515_initial.py  99360e5395e8_initial.py  9fffc80babb5_remove_tags.py  a1a7af3e2870_clients.py  aa962166605c_init.py  aaaefe3bcacf_add_default_uuid.py  b37a99cd17e0_discount.py  c7c0204ab275_add_all_tables.py  c830d26ef289_added_online_marker.py  ce9d05de983d_add_shift_to_order.py  e8eea4a9affd_initial.py  f93e9d9c8bc1_user.py
alembic_points_db/: alembic.ini  env.py
alembic_points_db/versions/: 4efaf0dc7fdc_init.py
alembic_users_db/: env.py
alembic_users_db/versions/: ccc199cc0127_init.py
app/: main.py
app/core/: configs.py  consts.py  (+1 more)
docker/: Dockerfile  docker-compose.yml
docs/: alembic.md  common_information.md  docker.md  endpoints_admin.md  endpoints_barista.md  pytest.md
(+128 files in other folders)
