[project]
name = "vladislav-background"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.0",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.1",
]
